test/corpus/complex.txt
================================================================================
Nested plural in select
================================================================================

status: "{user, select, admin {Admin has {count, plural, =0 {no tasks} other {# tasks}}} other {User}}"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (complex_message
      (identifier)
      (message_type)
      (format_spec (select_rules
        (select_case 
          (select_key (identifier)) 
          (case_body 
            (string_content)
            (complex_message
              (identifier)
              (message_type)
              (format_spec (plural_rules
                (plural_case (plural_key (number)) (case_body (string_content)))
                (plural_case (plural_key) (case_body (pound_placeholder) (string_content))))))))
        (select_case (select_key (identifier)) (case_body (string_content)))))))))

================================================================================
Selectordinal
================================================================================

position: "You finished {place, selectordinal, =1 {1st} =2 {2nd} =3 {3rd} other {#th}}"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (string_content)
    (complex_message
      (identifier)
      (message_type)
      (format_spec (plural_rules
        (plural_case (plural_key (number)) (case_body (string_content)))
        (plural_case (plural_key (number)) (case_body (string_content)))
        (plural_case (plural_key (number)) (case_body (string_content)))
        (plural_case (plural_key) (case_body (pound_placeholder) (string_content)))))))))

================================================================================
Multiple placeholders in case body
================================================================================

invite: "{count, plural, =0 {No guests invited} =1 {Invited {guest} to {event}} other {Invited # people to {event}}}"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (complex_message
      (identifier)
      (message_type)
      (format_spec (plural_rules
        (plural_case (plural_key (number)) (case_body (string_content)))
        (plural_case 
          (plural_key (number)) 
          (case_body 
            (string_content)
            (placeholder (identifier))
            (string_content)
            (placeholder (identifier))))
        (plural_case 
          (plural_key) 
          (case_body 
            (string_content)
            (pound_placeholder)
            (string_content)
            (placeholder (identifier))))))))))

================================================================================
Triple nesting
================================================================================

complex: "{type, select, user {User {name} has {count, plural, =0 {no {item, select, task {tasks} message {messages} other {items}}} other {# items}}} other {Guest}}"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (complex_message
      (identifier)
      (message_type)
      (format_spec (select_rules
        (select_case 
          (select_key (identifier))
          (case_body
            (string_content)
            (placeholder (identifier))
            (string_content)
            (complex_message
              (identifier)
              (message_type)
              (format_spec (plural_rules
                (plural_case 
                  (plural_key (number))
                  (case_body
                    (string_content)
                    (complex_message
                      (identifier)
                      (message_type)
                      (format_spec (select_rules
                        (select_case (select_key (identifier)) (case_body (string_content)))
                        (select_case (select_key (identifier)) (case_body (string_content)))
                        (select_case (select_key (identifier)) (case_body (string_content))))))))
                (plural_case (plural_key) (case_body (pound_placeholder) (string_content))))))))
        (select_case (select_key (identifier)) (case_body (string_content)))))))))

================================================================================
Style format instead of skeleton
================================================================================

amount: "Total: {value, number, currency}"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (string_content)
    (complex_message
      (identifier)
      (message_type)
      (format_spec (style_format))))))

================================================================================
All plural keywords
================================================================================

comprehensive: "{count, plural, zero {zero items} one {one item} two {two items} few {few items} many {many items} other {# items}}"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (complex_message
      (identifier)
      (message_type)
      (format_spec (plural_rules
        (plural_case (plural_key) (case_body (string_content)))
        (plural_case (plural_key) (case_body (string_content)))
        (plural_case (plural_key) (case_body (string_content)))
        (plural_case (plural_key) (case_body (string_content)))
        (plural_case (plural_key) (case_body (string_content)))
        (plural_case (plural_key) (case_body (pound_placeholder) (string_content)))))))))

================================================================================
Mixed escaping with double quotes
================================================================================

mixed: "Say 'hello' to show '{name}' literally, but process {name} normally"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (string_content)
    (escaped_char (quoted_literal))
    (string_content)
    (escaped_char (quoted_literal))
    (string_content)
    (placeholder (identifier))
    (string_content))))

================================================================================
Offset with exact and other cases
================================================================================

attendees: "{going, plural, offset:2 =0 {Nobody is going} =1 {Only you are going} =2 {You and one other person} other {You and # others are going}}"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (complex_message
      (identifier)
      (message_type)
      (format_spec (plural_rules
        (offset (number))
        (plural_case (plural_key (number)) (case_body (string_content)))
        (plural_case (plural_key (number)) (case_body (string_content)))
        (plural_case (plural_key (number)) (case_body (string_content)))
        (plural_case (plural_key) (case_body (string_content) (pound_placeholder) (string_content)))))))))
