test/corpus/edge_cases.txt
================================================================================
Empty case body
================================================================================

empty: "{count, plural, other {}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key)
                (case_body)))))))))

================================================================================
Only number in case
================================================================================

number_only: "{count, plural, =5 {5}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key
                  (number))
                (case_body)))))))))

================================================================================
Only pound placeholder
================================================================================

pound_only: "{count, plural, other {#}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key)
                (case_body
                  (pound_placeholder))))))))))

================================================================================
Single character identifier
================================================================================

single: "{a}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (placeholder
          (identifier))))))

================================================================================
Single character key
================================================================================

a: "value"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string))))

================================================================================
Empty quoted string
================================================================================

empty: ""

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string))))

================================================================================
Empty template string
================================================================================

empty: ``

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (template_string))))

================================================================================
Just a comment
================================================================================

// Just a comment

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Multiple comments
================================================================================

// First comment
// Second comment
key: "value"

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (resource
    (key
      (identifier))
    (value
      (quoted_string))))

================================================================================
Minimal select with one case
================================================================================

minimal: "{type, select, other {default}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body)))))))))

================================================================================
Offset zero
================================================================================

zero_offset: "{count, plural, offset:0 other {items}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (offset
                (number))
              (plural_case
                (plural_key)
                (case_body)))))))))

================================================================================
Large offset
================================================================================

large: "{count, plural, offset:999 other {items}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (offset
                (number))
              (plural_case
                (plural_key)
                (case_body)))))))))

================================================================================
Single escape character
================================================================================

single_escape: "'{'"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (escaped_char
          (quoted_literal))))))

================================================================================
Sequential escapes no spaces
================================================================================

sequential: "'{}''#'"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (escaped_char
          (quoted_literal))
        (escaped_char
          (quoted_literal))))))

================================================================================
Identifier with underscores and numbers
================================================================================

complex_id: "{user_name_123}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (placeholder
          (identifier))))))

================================================================================
Very long identifier
================================================================================

long: "{very_long_identifier_name_with_many_words_and_numbers_123_456}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (placeholder
          (identifier))))))

================================================================================
Numbers with equals
================================================================================

numbers: "{count, plural, =0 {} =1 {} =999 {}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body)))))))))

================================================================================
All selectordinal forms
================================================================================

ordinal: "{n, selectordinal, =0 {0th} =1 {1st} =2 {2nd} =3 {3rd} =4 {4th} zero {0th} one {1st} two {2nd} few {few} many {many} other {#th}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (selectordinal)
            (plural_rules
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key
                  (number))
                (case_body))
              (plural_case
                (plural_key)
                (case_body))
              (plural_case
                (plural_key)
                (case_body))
              (plural_case
                (plural_key)
                (case_body))
              (plural_case
                (plural_key)
                (case_body))
              (plural_case
                (plural_key)
                (case_body))
              (plural_case
                (plural_key)
                (case_body
                  (pound_placeholder))))))))))

================================================================================
Skeleton with special characters
================================================================================

special: "{date, date, ::yyyy-MM-dd'T'HH:mm:ss.SSSZ}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (identifier)
          (skeleton_format
            (skeleton_pattern)))))))

================================================================================
Just whitespace in case
================================================================================

whitespace: "{count, plural, other {   }}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key)
                (case_body)))))))))

================================================================================
Nested empty cases
================================================================================

nested_empty: "{a, select, x {has {b, plural, other {}}} other {}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (complex_message
                    (selector
                      (identifier)
                      (plural)
                      (plural_rules
                        (plural_case
                          (plural_key)
                          (case_body)))))))
              (select_case
                (select_key
                  (identifier))
                (case_body)))))))))

================================================================================
Single word in template
================================================================================

word: `hello`

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (template_string))))

================================================================================
Entry without comma
================================================================================

no_comma: "value"
next: "value2"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string)))
  (resource
    (key
      (identifier))
    (value
      (quoted_string))))

================================================================================
Quoted key
================================================================================

"quoted_key": "value"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (quoted_string))
    (value
      (quoted_string))))

================================================================================
Tag with no content
================================================================================

tag: "Use <br> for breaks"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (tag
          (identifier))))))
