test/corpus/escaping.txt
================================================================================
Escaped braces
================================================================================

escaped: "Use '{' and '}' for braces"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char (quoted_literal))
    (escaped_char (quoted_literal)))))

================================================================================
Escaped pound sign
================================================================================

pound: "Use '#' for pound placeholder"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char (quoted_literal)))))

================================================================================
Escaped tags
================================================================================

tags: "Use '<' and '>' for tags"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char (quoted_literal))
    (escaped_char (quoted_literal)))))

================================================================================
Double single quotes for literal quote
================================================================================

literal: "Don''t use this"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char))))

================================================================================
Apostrophe in regular text
================================================================================

possessive: "This is John's book"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string)))

================================================================================
Single quote at end of string
================================================================================

ending: "Hello {name}'"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (placeholder (identifier))
    ("'"))))

================================================================================
Mixed escaping
================================================================================

mixed: "Say '{' and '}' for braces, '#' for pound, don''t forget"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char (quoted_literal))
    (escaped_char (quoted_literal))
    (escaped_char (quoted_literal))
    (escaped_char))))

================================================================================
Escaping in case bodies
================================================================================

cases: "{type, select, brace {Use '{'} pound {Use '#'} other {Normal}}"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (complex_message
      (identifier)
      (select_rules
        (select_case (select_key (identifier)) (case_body (escaped_char (quoted_literal))))
        (select_case (select_key (identifier)) (case_body (escaped_char (quoted_literal))))
        (select_case (select_key (identifier)) (case_body)))))))

================================================================================
Escaping in template strings
================================================================================

template: `Use '{' and '}' in templates`

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (template_string
    (escaped_char (quoted_literal))
    (escaped_char (quoted_literal)))))

================================================================================
Escaped placeholder in literal
================================================================================

literal_placeholder: "This shows '{{name}}' literally"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char (quoted_literal (placeholder (identifier)))))))

================================================================================
Escaped complex message in literal
================================================================================

literal_complex: "This shows '{count, plural, other {items}}' literally"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char (quoted_literal (complex_message
      (identifier)
      (plural_rules
        (plural_case (plural_key) (case_body)))))))))

================================================================================
Multiple escapes in sequence
================================================================================

sequence: "'{' '}' '#' '{' '}'"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char (quoted_literal))
    (escaped_char (quoted_literal))
    (escaped_char (quoted_literal))
    (escaped_char (quoted_literal))
    (escaped_char (quoted_literal)))))

================================================================================
Apostrophe contractions
================================================================================

contractions: "I'm, you're, it's, don't, won't"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string)))

================================================================================
Escaped tag in literal
================================================================================

literal_tag: "Use '<b>' for bold"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char (quoted_literal (tag (identifier)))))))

================================================================================
Complex escaping with nested structures
================================================================================

complex_escape: "{type, select, show {Display '{{count, plural, other {items}}}' as literal} hide {Don''t show} other {Normal {count} display}}"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (complex_message
      (identifier)
      (select_rules
        (select_case (select_key (identifier)) (case_body
          (escaped_char (quoted_literal (complex_message
            (identifier)
            (plural_rules
              (plural_case (plural_key) (case_body))))))))
        (select_case (select_key (identifier)) (case_body (escaped_char)))
        (select_case (select_key (identifier)) (case_body (placeholder (identifier)))))))))

================================================================================
Empty escaped literal
================================================================================

empty_escape: "This has '{}' empty braces"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char (quoted_literal)))))

================================================================================
Escaping at string boundaries
================================================================================

boundaries: "'{start}' and '{end}'"

--------------------------------------------------------------------------------

(source_file
  (key (identifier))
  (value (quoted_string
    (escaped_char (quoted_literal))
    (escaped_char (quoted_literal)))))
