test/corpus/nesting.txt
================================================================================
Nested plural in select
================================================================================

status: "{user, select, admin {Admin has {count, plural, =0 {no tasks} other {# tasks}}} other {User}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (complex_message
                    (selector
                      (identifier)
                      (plural)
                      (plural_rules
                        (plural_case
                          (plural_key
                            (number))
                          (case_body))
                        (plural_case
                          (plural_key)
                          (case_body
                            (pound_placeholder))))))))
              (select_case
                (select_key
                  (identifier))
                (case_body)))))))))

================================================================================
Nested select in plural
================================================================================

items: "{count, plural, =0 {No {type, select, task {tasks} message {messages} other {items}}} other {# items}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (plural)
            (plural_rules
              (plural_case
                (plural_key
                  (number))
                (case_body
                  (complex_message
                    (selector
                      (identifier)
                      (select)
                      (select_rules
                        (select_case
                          (select_key
                            (identifier))
                          (case_body))
                        (select_case
                          (select_key
                            (identifier))
                          (case_body))
                        (select_case
                          (select_key
                            (identifier))
                          (case_body)))))))
              (plural_case
                (plural_key)
                (case_body
                  (pound_placeholder))))))))))

================================================================================
Triple nesting - select plural select
================================================================================

complex: "{type, select, user {User {name} has {count, plural, =0 {no {item, select, task {tasks} message {messages} other {items}}} other {# items}}} other {Guest}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (placeholder
                    (identifier))
                  (complex_message
                    (selector
                      (identifier)
                      (plural)
                      (plural_rules
                        (plural_case
                          (plural_key
                            (number))
                          (case_body
                            (complex_message
                              (selector
                                (identifier)
                                (select)
                                (select_rules
                                  (select_case
                                    (select_key
                                      (identifier))
                                    (case_body))
                                  (select_case
                                    (select_key
                                      (identifier))
                                    (case_body))
                                  (select_case
                                    (select_key
                                      (identifier))
                                    (case_body)))))))
                        (plural_case
                          (plural_key)
                          (case_body
                            (pound_placeholder))))))))
              (select_case
                (select_key
                  (identifier))
                (case_body)))))))))

================================================================================
Multiple nesting levels with placeholders
================================================================================

nested: "{user, select, admin {Welcome {name}, you have {count, plural, =0 {no messages} =1 {one message} other {# messages}}} guest {Hello {name}} other {Hi there}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (placeholder
                    (identifier))
                  (complex_message
                    (selector
                      (identifier)
                      (plural)
                      (plural_rules
                        (plural_case
                          (plural_key
                            (number))
                          (case_body))
                        (plural_case
                          (plural_key
                            (number))
                          (case_body))
                        (plural_case
                          (plural_key)
                          (case_body
                            (pound_placeholder))))))))
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (placeholder
                    (identifier))))
              (select_case
                (select_key
                  (identifier))
                (case_body)))))))))

================================================================================
Nested with offset
================================================================================

progress: "{stage, select, initial {Starting {count, plural, offset:1 =0 {no tasks} other {# remaining tasks}}} final {Done!} other {Working}}"

--------------------------------------------------------------------------------

(source_file
  (resource
    (key
      (identifier))
    (value
      (quoted_string
        (complex_message
          (selector
            (identifier)
            (select)
            (select_rules
              (select_case
                (select_key
                  (identifier))
                (case_body
                  (complex_message
                    (selector
                      (identifier)
                      (plural)
                      (plural_rules
                        (offset
                          (number))
                        (plural_case
                          (plural_key
                            (number))
                          (case_body))
                        (plural_case
                          (plural_key)
                          (case_body
                            (pound_placeholder))))))))
              (select_case
                (select_key
                  (identifier))
                (case_body))
              (select_case
                (select_key
                  (identifier))
                (case_body)))))))))

================================================================================
Nested selectordinal in select
================================================================================

ranking: "{category, select, sports {You finished {place, selectordinal, =1 {1st} =2 {2nd} =3 {3rd} other {#th}} in sports} academic {Good job} other {Keep trying}}"

--------------------------------------------------------------------------------
